[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/assets/sheets/background-elements-redux-fix/Backgrounds/backgroundColorForest.png" type="Texture" id=1]
[ext_resource path="res://src/assets/fonts/Indie_Flower/IndieFlower-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://src/assets/sounds/Happy_birthday_tf_12.wav" type="AudioStream" id=3]
[ext_resource path="res://src/scripts/GameFinish.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 100
outline_size = 2
outline_color = Color( 0.176471, 0.384314, 0.364706, 1 )
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 20
outline_size = 1
outline_color = Color( 0.176471, 0.384314, 0.364706, 1 )
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 50
use_filter = true
font_data = ExtResource( 2 )

[node name="GameFinish" type="Node2D"]
script = ExtResource( 4 )

[node name="backgroundTexture" type="TextureRect" parent="."]
margin_top = -119.0
margin_right = 1024.0
margin_bottom = 905.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="congratulationsTitle" type="Label" parent="."]
margin_left = 36.0
margin_top = 40.0
margin_right = 988.0
margin_bottom = 187.0
custom_colors/font_color = Color( 0.639216, 0.960784, 0.117647, 1 )
custom_colors/font_color_shadow = Color( 0.176471, 0.384314, 0.364706, 1 )
custom_fonts/font = SubResource( 1 )
text = "Congratulations"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 128.0
margin_top = 192.0
margin_right = 896.0
margin_bottom = 448.0
custom_colors/font_color = Color( 0.639216, 0.960784, 0.117647, 1 )
custom_colors/font_color_shadow = Color( 0.176471, 0.384314, 0.364706, 1 )
custom_fonts/font = SubResource( 2 )
text = "Today, pollution has increased significantly. People believe that garbage does not affect ecosystems, but this causes various problems that affect species and even the way we live, as these cause diseases.

Thanks for playing. Remember that everything does not end here, the change is in you and everyone, a single person is not capable of solving this problem, that is why we owe our part to achieve a better and pollution-free world."
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="mainMenuButton" type="Button" parent="."]
margin_left = 192.0
margin_top = 472.0
margin_right = 448.0
margin_bottom = 552.0
custom_fonts/font = SubResource( 3 )
text = "Main menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="playAgainButton" type="Button" parent="."]
margin_left = 576.0
margin_top = 472.0
margin_right = 832.0
margin_bottom = 552.0
custom_fonts/font = SubResource( 3 )
text = "Play again"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="congratulationsSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -25.0

[connection signal="pressed" from="mainMenuButton" to="." method="_on_mainMenuButton_pressed"]
[connection signal="pressed" from="playAgainButton" to="." method="_on_playAgainButton_pressed"]
